--- a/Website/Flask/templates/index.html
+++ b/Website/Flask/templates/index.html
@@ -7,11 +7,11 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Snake</title>
+    <title>Login</title>
 </head>
 <body>
-    <div id="main">
-        <input type="submit" id="Start" value="Start">
-    </div>
+    <form action="" method="post">
+        <input type="submit" value="1">
+    </form>
 </body>
 </html>
