--- a/Website/Flask/templates/index.html
+++ b/Website/Flask/templates/index.html
@@ -10,8 +10,26 @@
     <title>Login</title>
 </head>
 <body>
-    <form action="" method="post">
-        <input type="submit" value="1">
+    <form action="/login" method="post">
+        <table>
+            <tr>
+                <td>帳號:</td>
+                <td>
+                    <input type="text" id="Account">
+                </td>
+            </tr>
+            <tr>
+                <td>密碼:</td>
+                <td>
+                    <input type="password" id="Password">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="submit" value="Login">
+                </td>
+            </tr>
+        </table>
     </form>
 </body>
 </html>
