--- a/Website/Flask/templates/index.html
+++ b/Website/Flask/templates/index.html
@@ -14,15 +14,11 @@
         <table>
             <tr>
                 <td>帳號:</td>
-                <td>
-                    <input type="text" id="Account">
-                </td>
+                <td><input type="text" name="Account"></td>
             </tr>
             <tr>
                 <td>密碼:</td>
-                <td>
-                    <input type="password" id="Password">
-                </td>
+                <td><input type="password" name="Password"></td>
             </tr>
             <tr>
                 <td colspan="2" align="center">
